--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-navbar",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://Nikhilchandra-Rathod.github.io/react-navbar",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -16,7 +17,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
-    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
+    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,6 +38,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.0",
+    "gh-pages": "^3.1.0",
     "postcss-cli": "^8.0.0",
     "tailwindcss": "^1.8.10"
   }
